--- a/vercel.json
+++ b/vercel.json
@@ -14,7 +14,7 @@
     "tests/**",
     "prisma/migrations/**",
     "Dockerfile",
-    "README.md",
+    "README.txt",
     "pytest.ini",
     "package.json"
   ]
